--- a/index.html
+++ b/index.html
@@ -22,5 +22,5 @@
 </div>
 
 </div></main>
-<footer><div class='wrapper'>© 2025 — Site pédagogique - Bourgault Gwenaël</div></footer>
+<footer><div class='wrapper'>© 2025 — Site pédagogique — Bourgault Gwenaël</div></footer>
 </body></html>
