--- a/outils/glisse-entiers-flex.html
+++ b/outils/glisse-entiers-flex.html
@@ -49,23 +49,24 @@
     display:grid;
     grid-template-columns:repeat(var(--cols), var(--cell));
     gap:var(--gap); justify-content:center; margin-top:12px;
+    padding-left:14px;                 /* slack gauche */
+    padding-right:14px;                /* slack droite */
     min-width: calc(var(--cols)*var(--cell) + (var(--cols)-1)*var(--gap) + 16px);
+    scroll-padding-left:28px;          /* confort recentrage */
     scroll-padding-right:36px;
   }
+  section.card{ overflow:visible; }     /* que rien ne soit rogné par la carte */
+
   .head{
     height:var(--headH); text-align:center; font-weight:800; background:#ececec;
     border-radius:14px; padding:0 6px; display:flex; align-items:center; justify-content:center
   }
-  /* Taille de police liée à la cellule + autoriser 2 lignes propres */
   .head .lbl{
     display:flex; flex-direction:column; align-items:center; justify-content:center;
     font-size:clamp(10px, calc(var(--cell)*0.18), 12px);
-    line-height:1.06;
-    text-wrap:balance;
+    line-height:1.06; text-wrap:balance;
   }
-  .head .lbl span{ /* plus de nowrap : permet le retour à la ligne entre mots */
-    display:block;
-  }
+  .head .lbl span{ display:block; }
 
   .cell{
     height:var(--cell); border:1.5px solid #4a4a4a; border-radius:10px;
@@ -136,7 +137,6 @@
   const status=document.getElementById('status');
   const euclid=document.getElementById('euclid');
 
-  /* Libellés (long) et (compact) */
   const LABELS_LONG = [
     ['Centaines','de milliards'],
     ['Dizaines','de milliards'],
@@ -166,13 +166,11 @@
     ['Unités']
   ];
 
-  /* État */
   let COLS=10, ids=[], order=[], inputs=[];
   let zeroMode='none', exp10=0;
   const leftStack=[], rightStack=[];
   let overflowSide=null;
 
-  /* Helpers scroll */
   function getScrollParent(el){
     let p=el.parentElement;
     while(p){
@@ -188,9 +186,12 @@
     if(!scroller) return;
     const r=el.getBoundingClientRect();
     const pr=scroller.getBoundingClientRect ? scroller.getBoundingClientRect() : {left:0,right:innerWidth,width:innerWidth};
-    if(r.left<pr.left+12 || r.right>pr.right-12){
-      const delta = r.left - (pr.left + pr.width/2 - r.width/2);
-      scroller.scrollBy({ left: delta, behavior: 'smooth' });
+    const padL=20, padR=20;
+    const needLeft  = r.left  < pr.left + padL;
+    const needRight = r.right > pr.right - padR;
+    if(needLeft || needRight){
+      const target = el.offsetLeft - (scroller.clientWidth/2 - el.offsetWidth/2);
+      scroller.scrollTo({ left: Math.max(0, target), behavior: 'smooth' });
     }
   }
 
@@ -204,7 +205,6 @@
     ensureVisible(inputs[i].parentElement);
   }
 
-  /* Sizing cellule + hauteur d’entête dynamique */
   function calcCell(){
     const root=document.documentElement;
     const cs=getComputedStyle(root);
@@ -217,9 +217,7 @@
     let c=Math.floor((inner - (COLS-1)*gap)/COLS);
     c=Math.max(MIN, Math.min(MAX, c));
     root.style.setProperty('--cell', c+'px');
-
-    // plus de hauteur d’entête quand cellules petites OU colonnes nombreuses
-    const ratio = (c<50 || COLS>=10) ? 0.66 : 0.52;
+    const ratio=(c<50 || COLS>=10)?0.66:0.52;
     root.style.setProperty('--headH', Math.round(Math.max(28, Math.min(48, c*ratio)))+'px');
   }
   function initLayoutWatchers(){
@@ -233,19 +231,16 @@
     if('ResizeObserver' in window){ new ResizeObserver(calcCell).observe(app); }
   }
 
-  /* Choix du set de libellés */
   function useCompactLabels(){ return COLS>=10 || Math.min(window.innerWidth, document.documentElement.clientWidth||window.innerWidth) < 420; }
 
-  /* Grille dynamique */
   function buildGrid(n){
     COLS=Math.max(6, Math.min(12, n|0));
     grid.style.setProperty('--cols', COLS);
     grid.innerHTML='';
 
     const all = useCompactLabels() ? LABELS_SHORT : LABELS_LONG;
-    const labels = all.slice(all.length - COLS); // on garde les COLS derniers (Unités à droite)
+    const labels = all.slice(all.length - COLS);
 
-    // En-têtes
     labels.forEach(parts=>{
       const head=document.createElement('div'); head.className='head';
       const lbl=document.createElement('div'); lbl.className='lbl';
@@ -253,7 +248,6 @@
       head.appendChild(lbl); grid.appendChild(head);
     });
 
-    // Cases
     ids=[]; order=Array.from({length:COLS},(_,i)=>i);
     for(let i=0;i<COLS;i++){
       const cell=document.createElement('div'); cell.className='cell';
@@ -268,7 +262,6 @@
     calcCell();
   }
 
-  /* Zéros d’affichage */
   function clearGhosts(){ grid.querySelectorAll('.cell .ghost').forEach(g=>g.remove()); }
   function addGhost(i){
     const cell=document.getElementById(ids[i]).parentElement;
@@ -291,7 +284,6 @@
     }
   }
 
-  /* ×10 / ÷10 + reste */
   function updateStatus(){
     let label='×1';
     if(exp10!==0){
@@ -312,12 +304,12 @@
     const prev=readRaw(); const next=prev.slice();
     const first=0, last=order.length-1;
 
-    if(dir==='left'){        // ×10
+    if(dir==='left'){
       exp10++;
       const lost=prev[first]; if(lost!=='') leftStack.push(lost);
       for(let i=first;i<=last;i++){ next[i]=(i+1<=last)?prev[i+1]:''; }
       if(rightStack.length){ next[last]=rightStack.pop(); }
-    } else {                 // ÷10
+    } else {
       exp10--;
       const lost=prev[last]; if(lost!=='') rightStack.push(lost);
       for(let i=last;i>=first;i--){ next[i]=(i-1>=first)?prev[i-1]:''; }
@@ -347,7 +339,6 @@
     if(!isTouch && inputs[0]){ inputs[0].focus(); ensureVisible(inputs[0].parentElement); }
   }
 
-  /* Handlers */
   function attachInputHandlers(){
     inputs.forEach(inp=>{
       inp.addEventListener('beforeinput',e=>{
@@ -385,12 +376,33 @@
   div10.addEventListener('click', ()=>shift('right'));
   colSelect.addEventListener('change', ()=>buildGrid(parseInt(colSelect.value,10)));
 
-  /* Init */
-  function rebuild(){ buildGrid(parseInt(colSelect.value,10)); }
-  rebuild(); initLayoutWatchers();
-  // recompacte si on tourne le tel
-  window.addEventListener('resize', rebuild);
-  window.addEventListener('orientationchange', ()=>setTimeout(rebuild, 60));
+  function buildGrid(n){ /* construit la grille + inputs */
+    COLS=Math.max(6, Math.min(12, n|0));
+    grid.style.setProperty('--cols', COLS);
+    grid.innerHTML='';
+    const all = (COLS>=10 || Math.min(window.innerWidth, document.documentElement.clientWidth||window.innerWidth) < 420)
+      ? LABELS_SHORT : LABELS_LONG;
+    const labels = all.slice(all.length - COLS);
+    labels.forEach(parts=>{
+      const head=document.createElement('div'); head.className='head';
+      const lbl=document.createElement('div'); lbl.className='lbl';
+      lbl.innerHTML=parts.map(t=>`<span>${t}</span>`).join('');
+      head.appendChild(lbl); grid.appendChild(head);
+    });
+    ids=[]; order=Array.from({length:COLS},(_,i)=>i);
+    for(let i=0;i<COLS;i++){
+      const cell=document.createElement('div'); cell.className='cell';
+      const inp=document.createElement('input'); inp.className='digit'; inp.maxLength=1; inp.inputMode='numeric';
+      const id='c'+i; inp.id=id; inp.setAttribute('aria-label', labels[i].join(' '));
+      cell.appendChild(inp); grid.appendChild(cell); ids.push(id);
+    }
+    inputs=order.map(i=>document.getElementById(ids[i]));
+    attachInputHandlers(); resetAll(); calcCell();
+  }
+
+  // Init
+  buildGrid(parseInt(colSelect.value,10));
+  initLayoutWatchers();
 })();
 </script>
 </body>
