--- a/outils/glisse-entiers-flex.html
+++ b/outils/glisse-entiers-flex.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-<title>Glisse-entiers (flexible)</title>
+<title>Glisse-entiers (flexiblep)</title>
 <style>
   :root{ --gap:8px; --cell:60px; --headH:32px; --cols:10; }
 
@@ -407,3 +407,4 @@
 </script>
 </body>
 </html>
+
