--- a/outils/glisse-entiers-flex.html
+++ b/outils/glisse-entiers-flex.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-<title>Glisse-entiers (flexiblep)</title>
+<title>Glisse-entiers (flexible)</title>
 <style>
   :root{ --gap:8px; --cell:60px; --headH:32px; --cols:10; }
 
@@ -90,7 +90,7 @@
 <body>
 <main class="app" id="app">
   <form class="card" onsubmit="return false;" autocomplete="off" autocapitalize="off" autocorrect="off" spellcheck="false">
-    <h1>Glisse-entiers (flexible)</h1>
+    <h1>Glisse-entiers (flexiblep)</h1>
 
     <div class="controls">
       <div class="picker">
@@ -407,4 +407,5 @@
 </script>
 </body>
 </html>
+
 
