--- a/outils/glisse-entiers-flex.html
+++ b/outils/glisse-entiers-flex.html
@@ -90,7 +90,7 @@
 <body>
 <main class="app" id="app">
   <form class="card" onsubmit="return false;" autocomplete="off" autocapitalize="off" autocorrect="off" spellcheck="false">
-    <h1>Glisse-entiers (flexiblep)</h1>
+    <h1>Glisse-entiers (flexible)</h1>
 
     <div class="controls">
       <div class="picker">
@@ -407,5 +407,6 @@
 </script>
 </body>
 </html>
+
 
 
