--- a/outils/index.html
+++ b/outils/index.html
@@ -74,7 +74,8 @@
         <p class="desc">Ateliers et activités autour du boulier.</p>
       </a>
 
-        <a class="card" href="bandes_maker_v2.html">
+      <!-- ★ NOUVEL OUTIL -->
+      <a class="card" href="bandes_maker_v2.html">
         <div class="title">Bandes maker v2</div>
         <p class="desc">Générateur de bandes (fractions) — version 2.</p>
       </a>
